--- a/AICITY2022_Track1_TAG/config/aic_reid3.yml
+++ b/AICITY2022_Track1_TAG/config/aic_reid3.yml
@@ -1,6 +1,6 @@
-DET_SOURCE_DIR: "${ROOT}/datasets/detection/images/test/S06/"
+DET_SOURCE_DIR: "${MTMCT_ROOT}/datasets/detection/images/test/S06/"
 REID_MODEL: "reid_model/resnet101_ibn_a_3.pth"
 REID_BACKBONE: "resnet101_ibn_a"
-DET_IMG_DIR: "${ROOT}/datasets/detect/"
-DATA_DIR: "${ROOT}/datasets/detect_reid3/"
+DET_IMG_DIR: "${MTMCT_ROOT}/datasets/detect/"
+DATA_DIR: "${MTMCT_ROOT}/datasets/detect_reid3/"
 REID_SIZE_TEST: [384, 384]
