--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 AIC_2020_Challenge_Track-1/__pycache__/*
 AIC_2020_Challenge_Track-1/utils/__pycache__/*
 AICITY2022_Track1_TAG/config/__pycache__/*
+AICITY2022_Track1_TAG/detector/yolov5/*/__pycache__/*
