--- a/AICITY2022_Track1_TAG/config/aic_reid1.yml
+++ b/AICITY2022_Track1_TAG/config/aic_reid1.yml
@@ -1,6 +1,6 @@
-DET_SOURCE_DIR: "${MTMCT_ROOT}/datasets/detection/images/test/S06/"
+DET_SOURCE_DIR: "datasets/detection/"
 REID_MODEL: "reid_model/resnet101_ibn_a_2.pth"
 REID_BACKBONE: "resnet101_ibn_a"
-DET_IMG_DIR: "${MTMCT_ROOT}/datasets/detect/"
-DATA_DIR: "${MTMCT_ROOT}/datasets/detect_reid1/"
+DET_IMG_DIR: "datasets/detect/"
+DATA_DIR: "datasets/detect_reid1/"
 REID_SIZE_TEST: [384, 384]
