--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
-*/datasets/*
 */data/*
 */output/*
 */weights/*
-*/reid_bidir/reid_model/*
-*/detector/yolov5/yolov5x.pt
 */venv
-*/reid_bidir/reid-matching/tools/exp
 **/__pycache__
 **/console.out
 **/*.pkl
-Corridor_Counting/predicted_counts.csv
-Corridor_Counting/predicted_sequences.json
+AICITY2022_Track1_TAG/datasets/*
+AICITY2022_Track1_TAG/detector/yolov5/yolov5x.pt
+AICITY2022_Track1_TAG/reid_bidir/reid_model/*
+AICITY2022_Track1_TAG/reid_bidir/reid-matching/tools/exp
 AICITY2022_Track1_TAG/reid_bidir/reid-matching/tools/log.txt
 AICITY2022_Track1_TAG/reid_bidir/reid-matching/tools/track1.txt
 AICITY2022_Track1_TAG/reid_bidir/reid-matching/tools/track1_interpolation.txt
 AICITY2022_Track1_TAG/reid_bidir/reid-matching/tools/test_cluster.pkl
+Corridor_Counting/predicted_counts.csv
+Corridor_Counting/predicted_sequences.json
